Port things to jabsrv-cli